syntax = "proto3";

package go.micro.srv.GetUserAuth;

service Example {
	rpc GetUserAuth(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Sessionid = 1;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
	string Real_name = 3;
	string Id_card = 4;
}

